[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Screens/Splash Screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Audio Output Manager.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Phoneme Edit.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Audio Generators/Fairy Generator.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Export Menu.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Per Rune.gd" type="Script" id=6]
[ext_resource path="res://UI/Tunic UI.tres" type="Theme" id=7]
[ext_resource path="res://Scripts/Translation List.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Trunic.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Lines.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Phonemes to Runes.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Audio Generators/Squaric Generator.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Audio Generators/Squaric2 Generator.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Generator Options.gd" type="Script" id=14]

[node name="Translator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 882

[node name="Control" type="Control" parent="HSplitContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 400

[node name="TabContainer" type="TabContainer" parent="HSplitContainer/Control/VSplitContainer"]
margin_right = 1024.0
margin_bottom = 449.0
theme = ExtResource( 7 )
tab_align = 0
use_hidden_tabs_for_min_size = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Per Rune" type="Control" parent="HSplitContainer/Control/VSplitContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 41.0
margin_right = -8.0
margin_bottom = -8.0
script = ExtResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/Control/VSplitContainer/TabContainer/Per Rune"]
anchor_right = 1.004
anchor_bottom = 1.01
margin_right = -4.06409
margin_bottom = -4.0
follow_focus = true

[node name="Lines" type="VBoxContainer" parent="HSplitContainer/Control/VSplitContainer/TabContainer/Per Rune/ScrollContainer"]
margin_right = 80.0
margin_bottom = 35.0
script = ExtResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/Control/VSplitContainer/TabContainer/Per Rune/ScrollContainer/Lines"]
margin_right = 80.0
margin_bottom = 35.0

[node name="Button" type="Button" parent="HSplitContainer/Control/VSplitContainer/TabContainer/Per Rune/ScrollContainer/Lines/HBoxContainer"]
margin_right = 80.0
margin_bottom = 35.0
text = "+ Line"

[node name="Phonemes to Runes" type="Control" parent="HSplitContainer/Control/VSplitContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 11 )

[node name="TextEdit" type="TextEdit" parent="HSplitContainer/Control/VSplitContainer/TabContainer/Phonemes to Runes"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
text = "T'IE P  F'EE N'OH M S  H'ERE"
highlight_current_line = true
syntax_highlighting = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview Panel" type="Panel" parent="HSplitContainer/Control/VSplitContainer"]
margin_top = 461.0
margin_right = 1024.0
margin_bottom = 600.0
rect_clip_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/Control/VSplitContainer/Preview Panel"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer"]
margin_top = 8.0
margin_right = 66.0
margin_bottom = 31.0
text = "Preview"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rune Settings Panel" type="PanelContainer" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer"]
margin_left = 70.0
margin_right = 580.0
margin_bottom = 39.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel"]
margin_left = 8.0
margin_top = 2.0
margin_right = 502.0
margin_bottom = 37.0

[node name="Height" type="Label" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer"]
margin_top = 6.0
margin_right = 56.0
margin_bottom = 29.0
text = "Height"

[node name="Height Spinner" type="SpinBox" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer"]
margin_left = 60.0
margin_right = 148.0
margin_bottom = 35.0
max_value = 300.0
value = 16.0
rounded = true
allow_greater = true
align = 1
suffix = "px"

[node name="VSeparator" type="VSeparator" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer"]
margin_left = 152.0
margin_right = 156.0
margin_bottom = 35.0

[node name="Radius" type="Label" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer"]
margin_left = 160.0
margin_top = 6.0
margin_right = 215.0
margin_bottom = 29.0
text = "Radius"

[node name="Radius Spinner" type="SpinBox" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer"]
margin_left = 219.0
margin_right = 307.0
margin_bottom = 35.0
max_value = 300.0
value = 16.0
rounded = true
allow_greater = true
align = 1
suffix = "px"

[node name="VSeparator2" type="VSeparator" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer"]
margin_left = 311.0
margin_right = 315.0
margin_bottom = 35.0

[node name="Thickness" type="Label" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer"]
margin_left = 319.0
margin_top = 6.0
margin_right = 402.0
margin_bottom = 29.0
text = "Thickness"

[node name="Thickness Spinner" type="SpinBox" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer"]
margin_left = 406.0
margin_right = 494.0
margin_bottom = 35.0
max_value = 300.0
value = 2.0
rounded = true
allow_greater = true
align = 1
suffix = "px"

[node name="Audio Generator Panel" type="PanelContainer" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer"]
margin_left = 584.0
margin_right = 938.0
margin_bottom = 39.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel"]
margin_left = 8.0
margin_top = 2.0
margin_right = 346.0
margin_bottom = 37.0

[node name="OptionButton" type="OptionButton" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer"]
margin_right = 124.0
margin_bottom = 35.0
text = "Generator"
flat = true
script = ExtResource( 14 )

[node name="VSeparator3" type="VSeparator" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer"]
margin_left = 128.0
margin_right = 132.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPS" type="Label" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer"]
margin_left = 136.0
margin_top = 6.0
margin_right = 171.0
margin_bottom = 29.0
text = "NPS"

[node name="NPS Spinner" type="SpinBox" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer"]
margin_left = 175.0
margin_right = 263.0
margin_bottom = 35.0
min_value = 1.0
value = 12.0
allow_greater = true
align = 1

[node name="VSeparator2" type="VSeparator" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer"]
margin_left = 267.0
margin_right = 271.0
margin_bottom = 35.0

[node name="Play Button" type="Button" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer"]
margin_left = 275.0
margin_right = 338.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 93.8593, 50.7525 )
size_flags_vertical = 4
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer"]
margin_left = 942.0
margin_right = 942.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer"]
margin_left = 946.0
margin_right = 1044.0
margin_bottom = 39.0

[node name="Export Menu" type="MenuButton" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/PanelContainer"]
margin_left = 8.0
margin_top = 2.0
margin_right = 90.0
margin_bottom = 37.0
text = "Export"
script = ExtResource( 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/Control/VSplitContainer/Preview Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 72.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Trunic Writer" type="Control" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/ScrollContainer"]
margin_right = 2.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
thickness = 2.0
radius = 16.0
height = 16.0

[node name="Audio Output Manager" type="Node" parent="HSplitContainer/Control/VSplitContainer/Preview Panel"]
script = ExtResource( 2 )
filedialog_path = NodePath("../../../../../FileDialog")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/Audio Output Manager"]
mix_target = 2
script = ExtResource( 4 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/Audio Output Manager"]
mix_target = 2
script = ExtResource( 12 )

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="HSplitContainer/Control/VSplitContainer/Preview Panel/Audio Output Manager"]
mix_target = 2
script = ExtResource( 13 )

[node name="Button" type="Button" parent="HSplitContainer/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -236.0
margin_bottom = 35.0
grow_horizontal = 0
toggle_mode = true
text = "Show Translation Guide"

[node name="PanelContainer" type="Panel" parent="HSplitContainer"]
visible = false
margin_left = 894.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Translations" type="GridContainer" parent="HSplitContainer/PanelContainer/ScrollContainer"]
margin_right = 633.0
margin_bottom = 2055.0
custom_constants/hseparation = 15
columns = 4
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Post Splash Animation" parent="." instance=ExtResource( 1 )]

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -200.0
margin_right = 400.0
margin_bottom = 200.0
resizable = true
access = 2
show_hidden_files = true
current_dir = "/"
current_path = "/"

[connection signal="tab_changed" from="HSplitContainer/Control/VSplitContainer/TabContainer" to="HSplitContainer/Control/VSplitContainer/TabContainer/Per Rune" method="_tab_changed"]
[connection signal="tab_changed" from="HSplitContainer/Control/VSplitContainer/TabContainer" to="HSplitContainer/Control/VSplitContainer/TabContainer/Phonemes to Runes" method="_tab_changed"]
[connection signal="pressed" from="HSplitContainer/Control/VSplitContainer/TabContainer/Per Rune/ScrollContainer/Lines/HBoxContainer/Button" to="HSplitContainer/Control/VSplitContainer/TabContainer/Per Rune/ScrollContainer/Lines" method="_add_line_button_pressed"]
[connection signal="value_changed" from="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer/Height Spinner" to="HSplitContainer/Control/VSplitContainer/Preview Panel/ScrollContainer/Trunic Writer" method="set_height"]
[connection signal="value_changed" from="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer/Radius Spinner" to="HSplitContainer/Control/VSplitContainer/Preview Panel/ScrollContainer/Trunic Writer" method="set_radius"]
[connection signal="value_changed" from="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Rune Settings Panel/HBoxContainer/Thickness Spinner" to="HSplitContainer/Control/VSplitContainer/Preview Panel/ScrollContainer/Trunic Writer" method="set_thickness"]
[connection signal="item_selected" from="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer/OptionButton" to="HSplitContainer/Control/VSplitContainer/Preview Panel/Audio Output Manager" method="_generator_index_item_selected"]
[connection signal="value_changed" from="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer/NPS Spinner" to="HSplitContainer/Control/VSplitContainer/Preview Panel/Audio Output Manager" method="_nps_spinner_value_changed"]
[connection signal="pressed" from="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer/Play Button" to="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer/Play Button" method="set_disabled" binds= [ true ]]
[connection signal="pressed" from="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer/Play Button" to="HSplitContainer/Control/VSplitContainer/Preview Panel/Audio Output Manager" method="play"]
[connection signal="export_audio" from="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/PanelContainer/Export Menu" to="HSplitContainer/Control/VSplitContainer/Preview Panel/Audio Output Manager" method="save_audio"]
[connection signal="export_image" from="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/PanelContainer/Export Menu" to="HSplitContainer/Control/VSplitContainer/Preview Panel/ScrollContainer/Trunic Writer" method="save"]
[connection signal="audio_played" from="HSplitContainer/Control/VSplitContainer/Preview Panel/Audio Output Manager" to="HSplitContainer/Control/VSplitContainer/Preview Panel/HBoxContainer/Audio Generator Panel/HBoxContainer/Play Button" method="set_disabled" binds= [ false ]]
[connection signal="toggled" from="HSplitContainer/Control/Button" to="HSplitContainer/PanelContainer" method="set_visible"]
